--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -4,14 +4,14 @@
         <div class="cloudBottom"></div>
     </div>-->
     <div id="welcomeContent">
-        <img id="welcomeImageSeal" src="assets/images/SealCircle.png"/>
-        <span id="welcomeHeader">WELCOME TO WESTEROSCRAFT</span>
-        <span id="welcomeDescription">Our mission is to recreate the universe imagined by author George RR Martin in his fantasy series, A Song of Ice and Fire.  Through the collaborative effort of thousands of community members, we have sought to create Westeros as accurately and precisely as possible within Minecraft.  The world we are creating is yours to explore.  Journey from Dorne to Castle Black, and if you aren’t afraid, beyond the Wall itself, but best not delay.  As the words of House Stark ominously warn: Winter is Coming.</span>
+        <img id="welcomeImageSeal" src="assets/images/Eradium.png"/>
+        <span id="welcomeHeader">BIENVENUE SUR ERADIUM</span>
+        <span id="welcomeDescription">Il s'agit de la 4ème version des serveurs "Eradium", optant pour donner un serveur pvp-faction équitable pour tout le monde, ce projet a été réalisé par un petit groupe indépendant qui souhaite se faire connaître plus tard, nous vous souhaitons la bienvenue et profitez du serveur autant que vous le pouvez!</span>
         <br>
-        <span id="welcomeDescCTA">You are just a few clicks away from Westeros.</span>
+        <span id="welcomeDescCTA">Vous n'êtes qu'à quelques clics d'Eradium.</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
-                CONTINUE
+                CONTINUER
                 <svg id="welcomeSVG" viewBox="0 0 24.87 13.97">
                     <defs>
                         <style>.arrowLine{fill:none;stroke:#FFF;stroke-width:2px;transition: 0.25s ease;}</style>
